# chroma_langchain_embedding_retrieval

./: README.md  local_nobel.py  pyproject.toml  torch_test.py
