[project]
name = "chroma-langchain-embedding-retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.6.3",
    "jq>=1.8.0",
    "langchain-community>=0.3.16",
    "langchain-huggingface>=0.1.2",
    "torch>=2.6.0.dev20241211",
    "yaspin>=3.1.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/nightly/cpu"
